force-app/main/default/objects/Market_Information__c/Market_Information__c.object-meta.xml
<CustomObject>
    <label>Market Information</label>
    <nameField>
        <displayFormat>MarketInfo-{00000}</displayFormat>
        <label>Market Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>