force-app/main/default/objects/Market_Information__c/fields/AMF_Butteroil__c.field-meta.xml
<CustomField>
    <fullName>AMF_Butteroil__c</fullName>
    <label>AMF / Butteroil</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>