force-app/main/default/objects/Market_Information__c/fields/Bluegrass_and_other_products__c.field-meta.xml
<CustomField>
    <fullName>Bluegrass_and_other_products__c</fullName>
    <label>Bluegrass and other products</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>