force-app/main/default/objects/Market_Information__c/fields/Butter_Products__c.field-meta.xml
<CustomField>
    <fullName>Butter_Products__c</fullName>
    <label>Butter Products</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>