force-app/main/default/objects/Market_Information__c/fields/Butter_Products_LSDP__c.field-meta.xml
<CustomField>
    <fullName>Butter_Products_LSDP__c</fullName>
    <label>Butter Products LSDP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>