force-app/main/default/objects/Market_Information__c/fields/Buttermilk__c.field-meta.xml
<CustomField>
    <fullName>Buttermilk__c</fullName>
    <label>Buttermilk</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>