force-app/main/default/objects/Market_Information__c/fields/CanadaOrOtherSupply__c.field-meta.xml
<CustomField>
    <fullName>CanadaOrOtherSupply__c</fullName>
    <label>Canada (or other) Supply</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>