force-app/main/default/objects/Market_Information__c/fields/Caseins_Caseinates__c.field-meta.xml
<CustomField>
    <fullName>Caseins_Caseinates__c</fullName>
    <label>Caseins &amp; Caseinates</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>