force-app/main/default/objects/Market_Information__c/fields/Cheeses__c.field-meta.xml
<CustomField>
    <fullName>Cheeses__c</fullName>
    <label>Cheeses</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>