force-app/main/default/objects/Market_Information__c/fields/Cocoa__c.field-meta.xml
<CustomField>
    <fullName>Cocoa__c</fullName>
    <label>Cocoa</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>