force-app/main/default/objects/Market_Information__c/fields/Commentry__c.field-meta.xml
<CustomField>
    <fullName>Commentry__c</fullName>
    <label>Commentry</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>