force-app/main/default/objects/Market_Information__c/fields/Cream_Products_LSDP__c.field-meta.xml
<CustomField>
    <fullName>Cream_Products_LSDP__c</fullName>
    <label>Cream Products LSDP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>