force-app/main/default/objects/Market_Information__c/fields/Dairy_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Dairy_Product_Type__c</fullName>
    <label>Dairy Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMP</fullName>
            </value>
            <value>
                <fullName>Butter</fullName>
            </value>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Fluids</fullName>
            </value>
            <value>
                <fullName>Lactose</fullName>
            </value>
            <value>
                <fullName>Lonestar</fullName>
            </value>
            <value>
                <fullName>MPC</fullName>
            </value>
            <value>
                <fullName>Nonfat-SMP</fullName>
            </value>
            <value>
                <fullName>Permeate</fullName>
            </value>
            <value>
                <fullName>Protein</fullName>
            </value>
            <value>
                <fullName>SWP</fullName>
            </value>
            <value>
                <fullName>WMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>