force-app/main/default/objects/Market_Information__c/fields/EUSupply__c.field-meta.xml
<CustomField>
    <fullName>EUSupply__c</fullName>
    <label>EU Supply</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>