force-app/main/default/objects/Market_Information__c/fields/Fluids__c.field-meta.xml
<CustomField>
    <fullName>Fluids__c</fullName>
    <label>Fluids</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>