force-app/main/default/objects/Market_Information__c/fields/Fluids_LSDP__c.field-meta.xml
<CustomField>
    <fullName>Fluids_LSDP__c</fullName>
    <label>Fluids LSDP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>