force-app/main/default/objects/Market_Information__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-2.0</fullName>
            </value>
            <value>
                <fullName>-1.5</fullName>
            </value>
            <value>
                <fullName>-1.0</fullName>
            </value>
            <value>
                <fullName>-0.5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>