force-app/main/default/objects/Market_Information__c/fields/Forecast_Comments__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Comments__c</fullName>
    <label>Forecast Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>