force-app/main/default/objects/Market_Information__c/fields/FutureCommentry__c.field-meta.xml
<CustomField>
    <fullName>FutureCommentry__c</fullName>
    <label>Future Commentry</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>