force-app/main/default/objects/Market_Information__c/fields/Global_Demand__c.field-meta.xml
<CustomField>
    <fullName>Global_Demand__c</fullName>
    <label>Global Demand</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>