force-app/main/default/objects/Market_Information__c/fields/Lactose__c.field-meta.xml
<CustomField>
    <fullName>Lactose__c</fullName>
    <label>Lactose</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>