force-app/main/default/objects/Market_Information__c/fields/Milk_Protein_Concentrate__c.field-meta.xml
<CustomField>
    <fullName>Milk_Protein_Concentrate__c</fullName>
    <label>Milk Protein Concentrate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>