force-app/main/default/objects/Market_Information__c/fields/Misc_Blends__c.field-meta.xml
<CustomField>
    <fullName>Misc_Blends__c</fullName>
    <label>Misc. Blends</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>