force-app/main/default/objects/Market_Information__c/fields/Misc_Blends_LSDP__c.field-meta.xml
<CustomField>
    <fullName>Misc_Blends_LSDP__c</fullName>
    <label>Misc. Blends LSDP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>