force-app/main/default/objects/Market_Information__c/fields/Nonfat_Dry_Milk__c.field-meta.xml
<CustomField>
    <fullName>Nonfat_Dry_Milk__c</fullName>
    <label>Nonfat Dry Milk</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>