force-app/main/default/objects/Market_Information__c/fields/OceaniaSupply__c.field-meta.xml
<CustomField>
    <fullName>OceaniaSupply__c</fullName>
    <label>Oceania Supply</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>