force-app/main/default/objects/Market_Information__c/fields/Permeate__c.field-meta.xml
<CustomField>
    <fullName>Permeate__c</fullName>
    <label>Permeate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>