force-app/main/default/objects/Market_Information__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>