force-app/main/default/objects/Market_Information__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>