force-app/main/default/objects/Market_Information__c/fields/Wheat_Gluten__c.field-meta.xml
<CustomField>
    <fullName>Wheat_Gluten__c</fullName>
    <label>Wheat Gluten</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>