force-app/main/default/objects/Market_Information__c/fields/Whey__c.field-meta.xml
<CustomField>
    <fullName>Whey__c</fullName>
    <label>Whey</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>