force-app/main/default/objects/Market_Information__c/fields/Whey_Protein_Concentrate50__c.field-meta.xml
<CustomField>
    <fullName>Whey_Protein_Concentrate50__c</fullName>
    <label>Whey Protein Concentrate50+</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>