force-app/main/default/objects/Market_Information__c/fields/Whole_Milk__c.field-meta.xml
<CustomField>
    <fullName>Whole_Milk__c</fullName>
    <label>Whole Milk</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>