force-app/main/default/objects/Market_Information__c/fields/WHOLE_MILK_LSDP__c.field-meta.xml
<CustomField>
    <fullName>WHOLE_MILK_LSDP__c</fullName>
    <label>WHOLE MILK LSDP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>