force-app/main/default/objects/Market_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dairy_Product_Type__c</columns>
    <columns>Send_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>