force-app/main/default/objects/Market_Information__c/listViews/Sent_Last_Week.listView-meta.xml
<ListView>
    <fullName>Sent_Last_Week</fullName>
    <columns>NAME</columns>
    <columns>Dairy_Product_Type__c</columns>
    <columns>Send_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Send_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Sent Last Week</label>
</ListView>